my-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-argocd
  namespace: learn-argocd
  labels:
    app: learn-argocd
spec:
  selector:
    matchLabels:
      app: learn-argocd
  template:
    metadata:
      labels:
        app: learn-argocd
    spec:
      containers:
      - name: learn-argocd
        image: asia-southeast1-docker.pkg.dev/reiya-playground/learn-argocd/frontend
        resources:
          limits:
            memory: "100Mi"
            cpu:  "10m"
        ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: learn-argocd
  namespace: learn-argocd
spec:
  type: ClusterIP
  selector:
    app: learn-argocd
  ports:
    - port: 8080
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn-argocd
  namespace: learn-argocd
  labels:
    app: learn-argocd
spec:
  rules:
    - host: ingress.reiya.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: learn-argocd
                port:
                  number: 8080
