my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: frontend
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - host: ingress.reiya.tech
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name:  frontend-service
                port:
                  number: 8080
